<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2000000"
    tools:context=".DaftarActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="154dp"
        android:layout_height="123dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:layout_marginBottom="532dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/register" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="440dp"
        android:text="Username"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/unamereg"
        android:layout_width="373dp"
        android:layout_height="50dp"
        android:layout_marginBottom="392dp"
        android:background="@drawable/border_reg"
        android:ems="10"
        android:hint="@string/duname"
        android:inputType="textPersonName"
        android:paddingLeft="14dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="336dp"
        android:text="Email"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/mailreg"
        android:layout_width="373dp"
        android:layout_height="50dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/border_reg"
        android:ems="10"
        android:hint="@string/demail"
        android:inputType="textPersonName"
        android:paddingLeft="14dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FAF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:text="Password"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passreg"
        android:layout_width="373dp"
        android:layout_height="50dp"
        android:layout_marginBottom="192dp"
        android:background="@drawable/border_reg"
        android:ems="10"
        android:hint="@string/dpass"
        android:inputType="textPassword"
        android:paddingLeft="14dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FDFDFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:text="Re-Password"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/repassreg"
        android:layout_width="373dp"
        android:layout_height="46dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/border_reg"
        android:ems="10"
        android:hint="@string/drepass"
        android:inputType="textPassword"
        android:paddingLeft="14dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/butreg"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="REGISTER"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="147dp"
        android:layout_height="55dp"
        android:layout_marginBottom="484dp"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>